# rustler-core

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  check_size.py  release.toml  rustfmt.toml  🐎 rustler-core.code-workspace
.cargo/: config.toml
app/: main.rs
entities/: Cargo.toml
entities/src/: lib.rs
entities/src/market/: mod.rs  svc.rs
entities/src/orm/: market.rs  ticker.rs
entities/src/services/: market.rs  ticker.rs
examples/: bus-pub.rs  bus-sub.rs  rustler.rs  socket.rs
examples/binance/: mod.rs
gateway/: Cargo.toml
grpc/: Cargo.toml  build.rs
grpc/proto/: market.proto
grpc/src/: lib.rs  server.rs
grpc/src/services/: market.rs  ticker.rs
lib/: README.md  build.rs  lib.rs
lib/bus/: mod.rs
lib/bus/redis/: mod.rs  publish.rs  subscribe.rs
lib/bus/redis/stream/: mod.rs
lib/entities/: mod.rs
lib/entities/migration/: m20220101_000001_create_table_market.rs  m20240325_200049_create_table_ticker.rs  mod.rs
lib/entities/orm/: market.rs  ticker.rs
lib/entities/services/: market.rs  ticker.rs
lib/grpc/: mod.rs  server.rs
lib/grpc/proto/: market.proto  rustler.proto  ticker.proto
lib/grpc/services/: market.rs  ticker.rs
lib/rustlers/: README.md  bus.rs  mod.rs  rustler.rs  rustlerjar.rs  svc.rs
lib/rustlers/bus/: mod.rs  publish.rs  subscribe.rs
lib/rustlers/bus/redis/: publish.rs  subscribe.rs
lib/socket/: event.rs  mod.rs  server.rs  stats.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_market.rs  m20240325_200049_create_table_ticker.rs
rustlers/: Cargo.toml
rustlers/src/: lib.rs  rustlerjar.rs  rustlers.rs  svc.rs
rustlers/src/rustlers/: binance.rs
src/: main.rs
