[package]
name = "rustler-core"
version = "0.1.0"
edition = "2021"
description = "🐎 » rustler-core market data extractor core functionality"
authors = ["Lucas Colombo <lucas@lucode.ar>"]
build = "lib/build.rs"
license = "MIT"
repository = "https://github.com/lucas-labs/rustler-core"

[lib]
path = "lib/lib.rs"

[dependencies]
# utils
eyre = { version = "0.6.12", default-features = false }
dotenvy = "0.15.7"
chrono = "0.4.37"
getset = "0.1.2"

# async
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.79"

# grpc & websocket
tokio-tungstenite = { version = "0.21.0" }
tonic = "0.11.0"
prost = "0.12.3" # protocol buffers
futures = "0.3.30"
tokio-util = "0.7.11"

# database
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "macros",
] }
sea-orm-migration = { version = "0.12.15", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
redis = { version = "0.25.3", features = ["tokio-comp"] }

# other
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dependencies.lool]
version = "^0.3.2" # crates: disable-check
registry = "lugit"
features = [
    "cli.stylize",
    "logger",
    "sched.tokio",
    "sched.rule-recurrence",
    "macros",
]

[build-dependencies]
tonic-build = "0.11.0"
