[package]
name = "rustler-core"
version = "0.3.9"
edition = "2021"
description = "🐎 » rustler-core market data extractor core functionality"
authors = ["Lucas Colombo <lucas@lucode.ar>"]
build = "lib/build.rs"
license = "MIT"
repository = "https://github.com/lucas-labs/rustler-core"

[lib]
path = "lib/lib.rs"

[dependencies]
# utils
eyre = { version = "0.6.12", default-features = false }
dotenvy = "0.15.7"
chrono = "0.4.40"
getset = "0.1.5"

# async
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.88"

# grpc & websocket
tokio-tungstenite = { version = "0.26.2" }
tonic = "0.13.0"
prost = "0.13.5" # protocol buffers
futures = "0.3.31"
tokio-util = "0.7.14"

# database
sea-orm = { version = "1.1.7", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
    "macros",
] }
sea-orm-migration = { version = "1.1.7", features = [
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
redis = { version = "0.29.2", features = ["tokio-comp"] }

# other
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
lool = { version = "^0.3.2", registry = "lugit", features = [
    "cli.stylize",
    "logger",
    "sched.tokio",
    "sched.rule-recurrence",
    "macros",
] }
async-stream = "0.3.6"

[build-dependencies]
tonic-build = "0.13.0"
