[package]
name = "grpc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "grpc"
path = "src/lib.rs"

[dependencies]
entities = { path = "../entities" }
eyre = { version = "0.6.12", default-features = false }
prost = "0.12.3"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

